fixed stretching images

--- a/css/style.css
+++ b/css/style.css
@@ -422,7 +422,7 @@ a:active {
 	position: relative;
 	margin: 10px 10px 10px 10px;
 	padding: 2vh 1vh 2vh 1vh;
-	height: 260px;
+	height: 350px;
 	box-shadow: 1px 2px 10px -4px rgba(0, 0, 0, 0.2);
 	border-radius: 2px;
 	transition: all 300ms;
@@ -433,6 +433,9 @@ a:active {
 	justify-content: space-between;
 	color: black;
 	background-color: white;
+	font-size: 90%;
+	text-align: justify;
+	line-height: 1.2;
 }
 
 .company-statement {
@@ -451,7 +454,7 @@ a:active {
 }
 
 .testimonial-card p {
-	font-size: 90%;
+	font-size: 100%;
 	padding-left: 5px;
 	padding-right: 5px;
 }
@@ -743,6 +746,7 @@ a:active {
 
 .coaching-courts-row-2 img {
 	width: 48%;
+	object-fit: cover;
 }
 
 .coaching-courts-row-3 img {
